final tablet styles

--- a/less/content.less
+++ b/less/content.less
@@ -566,6 +566,9 @@ img{
 }
 
 #section-5-5{
+    .row.v-center .thirds{
+        grid-template-rows: 85px 1fr;
+    }
     .thirds .title{
         font-family: 'SegoeUISemiLight';
         font-size: 2em;
