--- a/less/laptop.less
+++ b/less/laptop.less
@@ -134,8 +134,13 @@
       grid-template-rows: 70px 1fr;
   }
 
-  #section-5-5 .thirds .title{
-    font-size: 1.5em;
+  #section-5-5 {
+    .thirds .title{
+      font-size: 1.5em;
+    }
+    .row.v-center .thirds {
+      grid-template-rows: 65px 1fr;
+    }
   }
 
   #section-5-7{
