--- a/less/nav.less
+++ b/less/nav.less
@@ -58,6 +58,8 @@ nav{
             }
             a{
                 color: white;
+                line-height: 35px;
+                padding: 10px 0;
                 &.purple {
                     
                     &.active, &:hover{
