--- a/less/grid.less
+++ b/less/grid.less
@@ -130,11 +130,11 @@ hr{
     }
     .left{
         text-align: right;
-        margin-right: -4em;
+        //margin-right: -4em;
     }
     .right{
         text-align: left;
-        margin-left: -4em;
+        //margin-left: -4em;
     }
     .middle{
         font-weight: 600;
