remove main content focus outline

--- a/less/grid.less
+++ b/less/grid.less
@@ -23,6 +23,10 @@ header{
     grid-column-end: 3;
     display: grid;
     grid-template-rows: minmax(50px, 1fr);
+    &:focus {
+        outline: none;
+        border: none;
+    }
 
     main{
     display: grid;
