--- a/less/grid.less
+++ b/less/grid.less
@@ -123,18 +123,19 @@ hr{
 
 
 .word-art{
-    .left, .middle, .right{
+     .middle, .right{
         grid-column: span 2;
         color: @nav-lt;
         font-size: 24px;
     }
     .left{
+        grid-column: span 1;
         text-align: right;
-        //margin-right: -4em;
+        color: @nav-lt;
+        font-size: 24px;
     }
     .right{
         text-align: left;
-        //margin-left: -4em;
     }
     .middle{
         font-weight: 600;
