word art take 2

--- a/less/grid.less
+++ b/less/grid.less
@@ -122,7 +122,8 @@ hr{
 
 
 
-.word-art{
+.row.word-art{
+    grid-template-columns: 150px repeat(8, 1fr); 
      .middle, .right{
         grid-column: span 2;
         color: @nav-lt;
