--- a/less/nav.less
+++ b/less/nav.less
@@ -1,9 +1,10 @@
 nav{
     background: @nav-lt;
-    overflow-y: scroll;
+    overflow-y: auto;
     height: 100%;
     position: fixed;
     top:0;
+    padding-right: 10px;
     justify-self: stretch;
     display: grid;
     padding-top: 50px;
@@ -15,6 +16,7 @@ nav{
     ul{
         list-style-type: none;
         margin-top: 0;
+        
         &#menu-list{
             padding-left:0;
         }
