--- a/styles/main.css
+++ b/styles/main.css
@@ -820,10 +820,11 @@ img {
 }
 nav {
   background: #252525;
-  overflow-y: scroll;
+  overflow-y: auto;
   height: 100%;
   position: fixed;
   top: 0;
+  padding-right: 10px;
   justify-self: stretch;
   display: grid;
   padding-top: 50px;
