--- a/less/nav.less
+++ b/less/nav.less
@@ -4,6 +4,7 @@ nav{
     height: 100%;
     position: fixed;
     top:0;
+    width: 260px;
     justify-self: stretch;
     display: grid;
     padding-top: 50px;
