desktop walkthrough updates

--- a/less/content.less
+++ b/less/content.less
@@ -789,10 +789,15 @@ img{
 }
 
 #section-6-3{
+
     .half{
+        grid-template-rows: 60px 1fr;
         title, img{
             grid-column: span 2;
         }
+    }
+    .row-twelve .thirds{
+        grid-column: span 3;
     }
 }
 .overlay{
